# Modulo_2

./: .gitignore  03_iteradores_generadores.py  04_zip_enumerate.py  05_comprehensions.py  Modulo_2.ipynb  README.md  bucles.py  estructuras_control.py  pyproject.toml
